flutter_blue_plus

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_reactive_ble: ^5.0.3
+  flutter_blue_plus: ^1.31.16
   permission_handler: ^11.0.1
 
   # The following adds the Cupertino Icons font to your application.
