Update Java and Kotlin versions for Android build
Bump sourceCompatibility and targetCompatibility to Java 17 in build.gradle.kts and build.gradle.kts files
Remove unused method comment in device_details_screen.dart
Update firmware update process in ant_service.dart and dfu_service.dart
Add progress and error logging for firmware update process
Update GeneratedPluginRegistrant.swift for nordic_dfu plugin
Update pubspec.yaml dependencies for nordic_dfu

--- a/.gitignore
+++ b/.gitignore
@@ -1,109 +1,94 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# VS Code related
-.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# === FLUTTER/DART ===
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
 .packages
-.pub-cache/
 .pub/
-/build/
+.pub-cache/
+build/
+generated_plugin_registrant.dart
 pubspec.lock
 
-# Web related
-lib/generated_plugin_registrant.dart
+# === PLATFORM SPECIFIC: iOS ===
+ios/Flutter/App.framework
+ios/Flutter/Flutter.framework
+ios/Flutter/Generated.xcconfig
+ios/Flutter/app.flx
+ios/Flutter/app.zip
+ios/Flutter/flutter_assets/
+ios/Flutter/flutter_export_environment.sh
+ios/.symlinks/
+ios/Pods/
+ios/.generated/
+ios/ServiceDefinitions.json
+ios/Runner.xcworkspace/
+ios/Runner.xcodeproj/project.xcworkspace/
+ios/Runner/GeneratedPluginRegistrant.*
 
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
-
-# Xcode
+# Xcode User Data & Build
+**/ios/**/*.xcuserstate
+**/ios/**/*.xcuserdata
+**/ios/**/DerivedData/
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
-**/ios/**/*.moved-aside
 **/ios/**/*.pbxuser
 **/ios/**/*.perspectivev3
-**/ios/**/*sync/
-**/ios/**/.sconsign.dblite
-**/ios/**/.tags*
-**/ios/**/.vagrant/
-**/ios/**/DerivedData/
-**/ios/**/Icon?
-**/ios/**/Pods/
-**/ios/**/.symlinks/
-**/ios/**/profile
-**/ios/**/xcuserdata
-**/ios/.generated/
-**/ios/Flutter/App.framework
-**/ios/Flutter/Flutter.framework
-**/ios/Flutter/Generated.xcconfig
-**/ios/Flutter/app.flx
-**/ios/Flutter/app.zip
-**/ios/Flutter/flutter_assets/
-**/ios/Flutter/flutter_export_environment.sh
-**/ios/ServiceDefinitions.json
-**/ios/Runner/GeneratedPluginRegistrant.*
 
-# Windows
-**/windows/flutter/generated_plugin_registrant.cc
-**/windows/flutter/generated_plugin_registrant.h
-**/windows/flutter/generated_plugins.cmake
+# === PLATFORM SPECIFIC: macOS ===
+macos/Flutter/ephemeral
+# ✅ We keep this one tracked:
+# macos/Flutter/GeneratedPluginRegistrant.swift
 
-# Linux
-**/linux/flutter/generated_plugin_registrant.cc
-**/linux/flutter/generated_plugin_registrant.h
-**/linux/flutter/generated_plugins.cmake
+# === PLATFORM SPECIFIC: Android ===
+android/.gradle/
+android/app/debug/
+android/app/profile/
+android/app/release/
+android/local.properties
+android/key.properties
+**/*.iml
 
-# macOS
-**/macos/Flutter/GeneratedPluginRegistrant.swift
-**/macos/Flutter/ephemeral
+# === PLATFORM SPECIFIC: Windows ===
+windows/flutter/ephemeral/
+# ✅ We keep registrant files tracked
 
-# Coverage
+# === PLATFORM SPECIFIC: Linux ===
+linux/flutter/ephemeral/
+# ✅ We keep registrant files tracked
+
+# === PLATFORM SPECIFIC: Web ===
+web/.dart_tool/
+web/build/
+
+# === ENV FILES ===
+.env
+.env.*
+*.keystore
+*.jks
+
+# === TESTING & COVERAGE ===
 coverage/
+*.lcov
+test_outputs/
 
-# Temporary Files
+# === LOGS, TEMP FILES ===
+*.log
 *.tmp
 *.temp
 *.bak
 *.swp
 *~
 
-# Local environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# === IDE: VS Code ===
+.vscode/
 
-# Generated files
-*.g.dart
-*.freezed.dart
-*.mocks.dart
+# === IDE: IntelliJ & Android Studio ===
+.idea/
+*.iml
+
+# === MISC ===
+.DS_Store
+.history
+*.class
+*.pyc
+.svn/
