--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- ✅ Required BLE & Location Permissions -->
@@ -15,7 +16,7 @@
 
 
     <application
-        android:label="satsbike_scanner"
+        android:label="BikeBLE Config"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
