--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "satsbike_scanner",
-    "short_name": "satsbike_scanner",
+    "name": "BikeBLE Config",
+    "short_name": "BikeBLE Config",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
