--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "satsbike_scanner" "\0"
+            VALUE "CompanyName", "Magpern Devops" "\0"
+            VALUE "FileDescription", "BikeBLE Config" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "satsbike_scanner" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "satsbike_scanner.exe" "\0"
-            VALUE "ProductName", "satsbike_scanner" "\0"
+            VALUE "InternalName", "BikeBLE Config" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 Magpern Devops. All rights reserved." "\0"
+            VALUE "OriginalFilename", "BikeBLE Config.exe" "\0"
+            VALUE "ProductName", "BikeBLE Config" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
