--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -115,3 +115,50 @@ jobs:
           releaseFiles: build/app/outputs/bundle/release/BikeBLE_Config-${{ steps.version.outputs.version }}.aab
           track: production
           status: completed
+          
+  deploy-website:
+    needs: build
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+        
+      - name: Download APK artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: release-aab
+          path: website/download
+          
+      - name: Generate QR Code
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qrencode
+          TAG=$(git describe --tags --abbrev=0)
+          SHA=$(git rev-parse --short HEAD)
+          VERSION="${TAG#v}-${SHA}"
+          DOWNLOAD_URL="https://github.com/magpern/Bike2FTMS/releases/latest/download/BikeBLE_Config-${VERSION}.aab"
+          qrencode -o website/qrcode.png -s 10 "$DOWNLOAD_URL"
+          
+      - name: Update QR code in HTML
+        run: |
+          sed -i 's|<div class="qr-placeholder" id="qr-code">.*<div class="qr-text">QR Code</div>.*</div>|<div class="qr-placeholder" id="qr-code"><img src="qrcode.png" alt="QR Code for App Download"></div>|g' website/index.html
+          
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: website
+          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
