--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -101,7 +101,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website
+          path: docs
           
       - name: Deploy to GitHub Pages
         if: startsWith(github.ref, 'refs/tags/')
