--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -92,20 +92,11 @@ jobs:
           # Update download link to APK instead of AAB
           sed -i 's|BikeBLE_Config.apk|BikeBLE_Config-${{ steps.version.outputs.version }}.apk|g' docs/index.html
           
-      - name: Upload Pages artifact
+      - name: Commit and push docs changes
         if: startsWith(github.ref, 'refs/tags/')
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs
-
-  deploy:
-    needs: build
-    environment: 
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4 
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add docs/qrcode.png docs/index.html
+          git commit -m "Update QR code and download link for release ${{ steps.version.outputs.version }}"
+          git push 
