Build using docker

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'skip release') }}
+    container:
+      image: ghcr.io/${{ github.repository }}:latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -30,18 +32,6 @@ jobs:
           VERSION="${TAG#v}-${SHA}"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Using version: $VERSION"
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.29.2'
-          channel: stable
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
