--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'skip release') }}
     container:
-      image: ghcr.io/${{ github.repository }}:latest
+      image: ghcr.io/magpern/bikebleflutter:latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
