--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -18,11 +18,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') && !contains(github.event.head_commit.message, 'skip release') }}
+    # Using a container but with proper volume mounts
     container:
       image: ghcr.io/magpern/bikebleflutter:latest
+      options: --user root
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for proper version derivation
+
+      - name: Fix permissions
+        run: |
+          # Fix permissions for GitHub Actions directories
+          mkdir -p /__w/_temp
+          chmod -R 777 /__w
+          # Create app directory with proper permissions
+          mkdir -p /app
+          chmod -R 777 /app
+          # Link current directory to /app
+          ln -sf $GITHUB_WORKSPACE /app/workspace
 
       - name: Derive version from Git
         id: version
