--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,15 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+
+# Add these properties to fix path issues
+org.gradle.vfs.watch=false
+org.gradle.internal.launcher.welcomeMessageEnabled=false
+
+# This causes Gradle to always use file.toURI() rather than file.getAbsolutePath()
+# which helps prevent Windows path issues
+org.gradle.java.home.use.file.uri=true
+
+# Ensure paths are normalized and use URIs for file references
+org.gradle.native.file.normalization=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.javaCompile.suppressSourceTargetDeprecationWarning=true
